Solve 04 - Array Cardio Day 1

--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Array Cardio 💪</title>
-  <link rel="icon" href="https://fav.farm/🔥" />
+  <link rel="icon" href="https://fav.farm/🔥">
 </head>
 <body>
   <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
@@ -38,28 +38,53 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const old = inventors.filter(inventor => {
+      return 1500 <= inventor.year && inventor.year < 1600;
+    });
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    const firstAndLastNames = inventors.map(inv => {
+      return {
+        first: inv.first,
+        last: inv.last,
+      };
+    });
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const sorted = inventors.slice().sort((a, b) => a.year - b.year);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    const totalAge = inventors.reduce((acc, inv) => acc + inv.passed - inv.year, 0);
 
     // 5. Sort the inventors by years lived
+    const sortedByYearsLived = inventors.slice().sort((a, b) => (a.passed - a.year) - (b.passed - b.year));
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+    const boulevards = [];
+    const containsDe = boulevards.filter(b => b.includes("de"));
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const sortedPeople = people.sort((a, b) => {
+      return a.split(", ")[1].localeCompare(b.split(", ")[1]);
+    })
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const cnt = {};
+    data.forEach(d => {
+      if (d in cnt) {
+        cnt[d]++;
+      } else {
+        cnt[d] = 1;
+      }
+    });
+    console.log(cnt);
 
   </script>
 </body>
