--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Array Cardio 💪💪</title>
-  <link rel="icon" href="https://fav.farm/🔥" />
+  <link rel="icon" href="https://fav.farm/🔥">
 </head>
 <body>
   <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
@@ -27,15 +27,23 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const YEAR = 2025;
+    console.log(people.some(p => YEAR - p.year >= 19));
+
     // Array.prototype.every() // is everyone 19 or older?
+    console.log(people.every(p => YEAR - p.year >= 19));
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    console.log(comments.find(c => c.id === 823423));
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const toDelete = comments.findIndex(c => c.id === 823423);
+    comments.splice(toDelete, 1);
+    console.log(comments);
 
   </script>
 </body>
